fix(github-jobs): set correct search button padding on mobile

--- a/legacy/github-jobs/src/components/SearchForm.scss
+++ b/legacy/github-jobs/src/components/SearchForm.scss
@@ -52,5 +52,6 @@
 
   @media (max-width: 767px) {
     width: 90%;
+    --button-padding: 14px 26px;
   }
 }
